[Lab1] Fix error missing alt in tag img

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <div class="main-container">
 
   <header>
-    <img src="images/avatar.jpg" width="250" height="250" style="border-radius: 50%; margin: 25px 25px 25px 30px" />
+    <img src="images/avatar.jpg" width="250" height="250" alt="Binh Lam, Tang" style="border-radius: 50%; margin: 25px 25px 25px 30px" />
   </header>
 
   <section style="padding-left: 20px">
