--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
       <div class="left">
         <h3>Labs</h3>
         <ul id="myMenu">
-          <li><a href="labs/lab1/lab1.html">Lab 1</a></li>
-          <li><a href="labs/lab2/lab2.html">Lab 2</a></li>
+          <li><a href="index.html">Lab 1 - Home</a></li>
+          <li><a href="labs/lab2/lab2.html">Lab 2 - About Me</a></li>
           <li><a href="labs/lab3/lab3.html">Lab 3</a></li>
           <li><a href="labs/lab4/lab4.html">Lab 4</a></li>
           <li><a href="labs/lab5/lab5.html">Lab 5</a></li>
