[Lab2] add Link to back home page

--- a/labs/lab2/lab2.html
+++ b/labs/lab2/lab2.html
@@ -57,6 +57,9 @@
   <header>
     <img src="/images/avatar.jpg" width="250" height="250" alt="Binh Lam, Tang" style="border-radius: 50%; margin: 25px 25px 25px 30px" />
   </header>
+  <div style="padding-left: 20px">
+    <a href="/index.html">Home</a>
+</div>
   <section style="padding-left: 20px">
       <h1>Binh Lam, Tang - 610771</h1>
       <h2>Course CS472 - Web Application Programming</h2>
