[Recipe] Create page Recipel

--- a/index.html
+++ b/index.html
@@ -5,53 +5,10 @@
   <title>CS472 - BINH LAM TANG</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-
   <link rel="stylesheet" href="styles/main.css">
   <link rel="stylesheet" href="styles/normalize.css">
-  <style>
-    * {
-      box-sizing: border-box;
-    }
-
-    /* Create a column layout with Flexbox */
-    .row {
-      display: flex;
-    }
-
-    /* Left column (menu) */
-    .left {
-      flex: 10%;
-    }
-
-    /* Right column (page content) */
-    .right {
-      flex: 90%;
-    }
-
-    /* Style the navigation menu inside the left column */
-    #myMenu {
-      list-style-type: none;
-      padding: 0;
-      margin: 0;
-    }
-
-    #myMenu li a {
-      text-decoration: none;
-      color: blue;
-      display: block;
-      padding-bottom: 5px;
-      font-weight: 300;
-      letter-spacing: 1px;
-    }
-
-    #myMenu li a:hover {
-      color: #c3251d;
-      text-decoration: underline;
-    }
-  </style>
 </head>
-<body>
+<body >
 <div class="main-container">
 
   <header>
@@ -67,7 +24,7 @@
         <ul id="myMenu">
           <li><a href="index.html">Lab 1 - Home</a></li>
           <li><a href="labs/lab2/lab2.html">Lab 2 - About Me</a></li>
-          <li><a href="labs/lab3/lab3.html">Lab 3</a></li>
+          <li><a href="labs/lab3/lab3.html">Lab 3 - Recipe</a></li>
           <li><a href="labs/lab4/lab4.html">Lab 4</a></li>
           <li><a href="labs/lab5/lab5.html">Lab 5</a></li>
           <li><a href="labs/lab6/lab6.html">Lab 6</a></li>
