--- a/labs/lab3/lab3.html
+++ b/labs/lab3/lab3.html
@@ -1,10 +1,120 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="utf-8">
+  <title>CS472 - BINH LAM TANG</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="/styles/main.css">
+  <link rel="stylesheet" href="/styles/normalize.css">
+  <link href="/styles/recipe.css" type="text/css" rel="stylesheet"/>
 </head>
-<body>
-  <h1>Wellcome Lab 3</h1>
+<body class="recipel">
+  <header>
+    <img src="/images/avatar.jpg" width="250" height="250" alt="Binh Lam, Tang" style="border-radius: 50%; margin: 25px 25px 25px 30px" />
+  </header>
+  <div style="padding-left: 20px">
+    <a href="/index.html">Home</a>
+  </div>
+  <div class="header">
+  <div class="titleWrapper">
+        <h1 class="pageTitle">Grandma's Lemon Meringue Pie</h1>
+    </div>
+    <img src="/images/recipel/pie.jpg" alt="lemon meringue pie" title="lemon meringue pie" />
+
+    <ul class="item-list">
+        <li>One 9-inch pie</li>
+        <li>30 Min - Prep time</li>
+        <li>10 Min - Cook time</li>
+        <li>40 Min - Total</li>
+        <li>8 Servings</li>
+    </ul>
+  </div>
+<div class="content">
+  <section class="section">
+    <h2>INGREDIENTS</h2>
+    <ul id="ingredients">
+      <li>1 cup white sugar</li>
+      <li>2 <span class="tooltip">tbsp<span class="tooltiptext">tablespoons</span></span> all-purpose flour</li>
+      <li>3 <span class="tooltip">tbsp<span class="tooltiptext">tablespoons</span></span> cornstarch</li>
+      <li>1/4 <span class="tooltip">tsp <span class="tooltiptext">teaspoon</span> </span> salt</li>
+      <li>1 1/2 cups water</li>
+      <li>2 lemons, juiced and zested</li>
+      <li>2 <span class="tooltip">tbsp <span class="tooltiptext">tablespoon</span> </span> butter</li>
+      <li>4 egg yolks, beaten</li>
+      <li>1 (9 inch) pie crust, baked</li>
+      <li>4 egg whites</li>
+      <li>6 <span class="tooltip">tbsp <span class="tooltiptext">tablespoon</span> </span> white sugar</li>
+    </ul>
+  </section>
+  <section class="section">
+    <h2>DIRECTIONS</h2>
+    <ol id="directions">
+        <li><strong>Preheat Oven:</strong> Preheat oven to 350 degrees F (175 degrees C).
+            <ul>
+                <li>Whisk together 1 cup sugar, flour, cornstarch, and salt.</li>
+                <li>Stir in water, lemon juice and lemon zest.</li>
+                <li>Cook over medium-high heat, stirring frequently, until mixture comes to a boil.</li>
+                <li>Stir in butter.</li>
+                <li>Place egg yolks in a small bowl and gradually whisk in 1/2 cup of hot sugar mixture.</li>
+                <li>Whisk egg yolk mixture back into remaining sugar mixture.</li>
+                <li>Bring to a boil and continue to cook while stirring constantly until thick.</li>
+                <li>Remove from heat.</li>
+                <li>Pour filling into baked pastry shell.</li>
+            </ul>
+        </li>
+        <li>
+            <strong>Make Lemon Filling:</strong> In a medium saucepan ...
+            <ul>
+                <li>Whip egg whites until foamy.</li>
+                <li>Add sugar gradually, and continue to whip until stiff peaks form.</li>
+                <li>Spread meringue over pie, sealing the edges at the crust.</li>
+            </ul>
+        </li>
+        <li><strong>Make Meringue:</strong> In a large glass or metal bowl ...</li>
+        <li><strong>Bake:</strong> Bake in preheated oven for 10 minutes, or until meringue is golden brown.</li>
+    </ol>
+    <p>
+            This is our favorite recipe here at Granny's Pies. It has been enjoyed by pie fans for many years. It's Granny's favorite! We hope you'll find that this recipe is delicious and also easy to follow; it's a piece of <span class="lineThrough">cake</span> pie!
+    </p>
+  </section>
+  <section class="section">
+      <h2>User Comments</h2>
+      <ul id="userComments">
+          <li>
+              <p>This is a very fun recipe to follow, because Grandma makes it sweet and simple. This pie is thickened with cornstarch and flour in addition to egg yolks, and contains no milk.</p>
+              <p>- Emilie S.</p>
+          </li>
+          <li>
+              <p>Q: What do you call an ape who loves pie?
+                  <br />
+                  A: A meringue-utan.</p>
+
+              <p>- Vickie K.</p>
+          </li>
+          <li>
+              <p>This site can really <strong>engage</strong> my interest. Follow the recipe above and <strong>make it so!</strong> This pie is <strong>number one</strong>.</p>
+              <p>- Jean-Luc Piecard</p>
+          </li>
+      </ul>
+  </section>
+</div>
+  <section>
+    <div class="siteInfo" style="margin-left: 25px; color: darkcyan;">
+      <strong>&copy; Binh Lam Tang</strong>
+      <br />Maharishi University of Management
+      <br />Address: 1000 N 4th St., Fairfield, Iowa, 52557
+      <br />Email: <a href="mailto:btang@miu.edu" title="email: btang@miu.edu">btang@miu.edu</a>
+    </div>
+
+    <div class="w3cValidator">
+      <a href="https://validator.w3.org/check/referer">
+        <img src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png" alt="html validator"/>
+      </a>
+      <a href="https://jigsaw.w3.org/css-validator/check/referer">
+        <img src="http://mumstudents.org/cs472/2013-09/images/w3c-css.png" alt="css validator"/>
+      </a>
+    </div>
+  </section>
 </body>
 </html>
