[lab3] Practice Layout

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         <ul id="myMenu">
           <li><a href="index.html">Lab 1 - Home</a></li>
           <li><a href="labs/lab2/lab2.html">Lab 2 - About Me</a></li>
-          <li><a href="labs/lab3/lab3.html">Lab 3 - Recipe</a></li>
+          <li><a href="labs/lab3/lab3.html">Lab 3 - Recipe</a>
+            <a class="sub-menu" href="labs/lab3/layout.html">Practice Layout</a>
+          </li>
           <li><a href="labs/lab4/lab4.html">Lab 4</a></li>
           <li><a href="labs/lab5/lab5.html">Lab 5</a></li>
           <li><a href="labs/lab6/lab6.html">Lab 6</a></li>
