[Lab4] Lesson 4: CSS for Page Layout

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a class="sub-menu" href="labs/lab3/layout.html">Practice Layout</a>
             <a class="sub-menu" href="labs/lab3/movie.html">Movie Review</a>
           </li>
-          <li><a href="labs/lab4/lab4.html">Lab 4</a></li>
+          <li><a href="labs/lab4/lab4.html">Lab 4: CSS for Page Layout</a></li>
           <li><a href="labs/lab5/lab5.html">Lab 5</a></li>
           <li><a href="labs/lab6/lab6.html">Lab 6</a></li>
           <li><a href="labs/lab7/lab7.html">Lab 7</a></li>
