--- a/labs/lab4/lab4.html
+++ b/labs/lab4/lab4.html
@@ -1,10 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-  <h1>Wellcome Lab 4</h1>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>CS472 - BINH LAM TANG</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/labs/lab4/layout.css">
+  </head>
+  <body>
+    <div class="container-fluid">
+        <!--header-->
+        <div class="row">
+            <header>
+                <h3>Header</h3>
+            </header>
+        </div>
+        <!--menu-->
+        <div class="row">
+            <nav>
+                <div>
+                    <a href="/index.html">Home<a>
+                </div>
+                <div><a href="#">Menu1</a></div>
+                <div><a href="#">Menu2</a></div>
+                <div><a href="#">Menu3</a></div>
+            </nav>
+        </div>
+        <!--content-->
+        <div class="row content">
+            <div id="divOne">
+                    Column 1
+            </div>
+            <div id="divTwo">
+                    Column 2
+            </div>
+            <div id="divThree">
+                    Column 3
+            </div>
+        </div>
+        <!--footer-->
+        <div class="row">
+            <footer>
+                Footer
+            </footer>
+        </div>
+    </div>
+  </body>
 </html>
