--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </li>
           <li><a href="labs/lab4/lab4.html">Lab 4: CSS for Page Layout</a></li>
           <li><a href="labs/lab5/lab5.html">Lab 5</a></li>
-          <li><a href="labs/lab6/lab6.html">Lab 6</a></li>
+          <li><a href="labs/lab6/lab6.html">Lab 6: Scope, closures and encapsulation</a></li>
           <li><a href="labs/lab7/lab7.html">Lab 7</a></li>
           <li><a href="labs/lab8/lab8.html">Lab 8</a></li>
           <li><a href="labs/lab9/lab9.html">Lab 9</a></li>
