--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a class="sub-menu" href="labs/lab3/movie.html">Movie Review</a>
           </li>
           <li><a href="labs/lab4/lab4.html">Lab 4: CSS for Page Layout</a></li>
-          <li><a href="labs/lab5/lab5.html">Lab 5</a></li>
+          <li><a href="labs/lab5/lab5.html">Lab 5: Basic JavaScript</a></li>
           <li><a href="labs/lab6/lab6.html">Lab 6: Scope, closures and encapsulation</a></li>
           <li><a href="labs/lab7/ascii.html">Lab 7:</a>
             <a class="sub-menu" href="labs/lab7/ascii.html">ASCII Animation</a>
