add title for lab 5

--- a/labs/lab5/lab5.html
+++ b/labs/lab5/lab5.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
+    <h1>Lab 6 - Basic JavaScript</h1>
   <div style="padding-left: 20px">
     <a href="/index.html">Home</a>
   </div>
