Lab: DOM, jQuery (Maze)

--- a/index.html
+++ b/index.html
@@ -35,15 +35,7 @@
             <a class="sub-menu" href="labs/lab7/ascii.html">ASCII Animation</a>
             <a class="sub-menu" href="labs/lab7/map-filter-reduce.html">Map/filter/reduce</a>
           </li>
-          <li><a href="labs/lab8/lab8.html">Lab 8</a></li>
-          <li><a href="labs/lab9/lab9.html">Lab 9</a></li>
-          <li><a href="labs/lab10/lab10.html">Lab 10</a></li>
-          <li><a href="labs/lab11/lab11.html">Lab 11</a></li>
-          <li><a href="labs/lab12/lab12.html">Lab 12</a></li>
-          <li><a href="labs/lab13/lab13.html">Lab 13</a></li>
-          <li><a href="labs/lab14/lab14.html">Lab 14</a></li>
-          <li><a href="labs/lab15/lab15.html">Lab 15</a></li>
-          <li><a href="labs/lab16/lab16.html">Lab 16</a></li>
+          <li><a href="labs/lab8/maze.html">Lab: DOM, jQuery (Maze)</a></li>
         </ul>
       </div>
       <div class="right"></div>
