--- a/labs/lab8/maze.html
+++ b/labs/lab8/maze.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 		<title>Maze!</title>
-		<!-- provided files; do not modify -->
+    <!-- provided files; do not modify -->
 		<link href="maze.css" type="text/css" rel="stylesheet" />
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
 
-		<!-- your code -->
-		<script src="maze.js" type="text/javascript"></script>
+    <!-- your code -->
+    <script src="maze.js" type="text/javascript"></script>
 	</head>
 
-	<body>
+	<body style="background-color: #aec1b1;">
     <div style="padding-left: 20px">
       <a href="/index.html">Home</a>
     </div>
