[Lesson: Events (Clean Screen)]

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <a class="sub-menu" href="labs/lab7/map-filter-reduce.html">Map/filter/reduce</a>
           </li>
           <li><a href="labs/lab8/maze.html">Lab: DOM, jQuery (Maze)</a></li>
+          <li><a href="labs/lab9/lab9.html">Lab: Events (Clean Screen)</a></li>
         </ul>
       </div>
       <div class="right"></div>
