--- a/labs/lab9/lab9.html
+++ b/labs/lab9/lab9.html
@@ -1,10 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Clean Screen</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
+    <link rel="stylesheet" href="cleanscreen.css" />
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" type="text/javascript"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js" type="text/javascript"></script>
+    <script src="cleanscreen.js" type="text/javascript"></script>
 </head>
+
 <body>
-  <h1>Wellcome Lab 9</h1>
+<h1>Clean Screen</h1>
+<a href="/index.html">Home</a>
+<div id="setting">
+    <div class="row">
+        <div class="col-md-3">
+            <label for="width">Width: </label><input type="text" id="width" value="50" class="form-control" />
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-3">
+            <label for="amount">Growth Amount: </label><input type="text" id="amount" value="10" class="form-control" />
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-3">
+            <label for="rate">Grow Rate: </label><input type="text" id="rate" value="250" class="form-control" />
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-3">
+            <label for="noOfCircles">No Of Circles</label><input type="text" class="form-control" id="noOfCircles" value="3" placeholder="No Of Circles" />
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-3">
+            <input type="button" value="Start" class="btn btn-primary" id="btnStart" />
+            <input type="button" value="Clear All" class="btn btn-primary" id="btnClear" />
+        </div>
+    </div>
+
+    <div id="circles">
+    </div>
+</div>
+
 </body>
 </html>
